<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginStart="@dimen/dim_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_settings_explanation"/>

    <TextView
        android:id="@+id/tv_settings_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:text="@string/label_settings_explanation"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_settings_explanation"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_explanation">

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/teal_200"
            android:text="@string/rb_label_english"/>

        <RadioButton
            android:id="@+id/rb_portuguese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_74dp"
            android:buttonTint="@color/teal_200"
            android:text="@string/bg_label_portuges"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_16dp"
        android:layout_marginTop="@dimen/dim_48dp"
        android:layout_marginEnd="@dimen/dim_16dp"
        android:text="@string/btn_save"
        android:background="@drawable/btn_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_language" />

</androidx.constraintlayout.widget.ConstraintLayout>