<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/margin_8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_32dp"
        android:background="@color/teal_200">

        <TextView
            android:id="@+id/tv_label_favorite_city_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_city" />

        <TextView
            android:id="@+id/tv_favorite_city_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tv_label_favorite_city_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Recife" />

        <TextView
            android:id="@+id/tv_label_favorite_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_label_favorite_city_name"
            app:layout_constraintTop_toBottomOf="@id/tv_label_favorite_city_name"
            android:text="@string/label_country" />

        <TextView
            android:id="@+id/tv_favorite_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tv_label_favorite_country"
            app:layout_constraintTop_toTopOf="@id/tv_label_favorite_country"
            tools:text="220302" />

        <TextView
            android:id="@+id/tv_label_weather_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_label_favorite_country"
            app:layout_constraintTop_toBottomOf="@id/tv_label_favorite_country"
            android:text="@string/label_main_weather" />

        <TextView
            android:id="@+id/tv_weather_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_label_weather_main"
            app:layout_constraintTop_toBottomOf="@id/tv_label_weather_main"
            tools:text="Clouds" />

        <TextView
            android:id="@+id/tv_descryption_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_weather_main"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_main"
            tools:text="broken clouds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>