<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SearchFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dim_8dp"
        android:paddingEnd="@dimen/dim_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:layout_weight="0.7"
            android:hint="@string/hint_city_name"
            android:textAlignment="center"
            android:textSize="@dimen/dim_20sp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:layout_weight="0.3"
            android:background="@drawable/btn_shape"
            android:textColor="@color/black"
            android:text="@string/btn_search" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_error_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/dim_14sp"
        android:layout_marginStart="@dimen/dim_8dp"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="@id/linear_layout"
        tools:text="Feedback" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linear_layout"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/search_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="txt_explanation,recyclerview"/>

    <TextView
        android:id="@+id/txt_explanation"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_explanation"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:textSize="@dimen/dim_18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_error_feedback"
        app:layout_constraintStart_toStartOf="@id/recyclerview"
        app:layout_constraintEnd_toEndOf="@id/recyclerview"
        app:layout_constraintBottom_toTopOf="@id/recyclerview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/dim_80dp"
        android:layout_margin="@dimen/dim_8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbars="vertical"
        tools:listitem="@layout/recyclerview_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_explanation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>