<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailsActivity">

    <include
        android:id="@+id/toolbarMain"
        layout="@layout/toolbar_included"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

   <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dim_8dp"
        app:cardCornerRadius="@dimen/dim_16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dim_32dp"
        android:background="@color/teal_200">

        <TextView
            android:id="@+id/tv_label_detalis_city_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_32dp"
            android:layout_marginTop="@dimen/dim_32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_city" />

        <TextView
            android:id="@+id/tv_detalis_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_8dp"
            android:layout_marginTop="@dimen/dim_32dp"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@id/tv_label_detalis_city_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Recife" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dim_100dp"
            android:layout_height="@dimen/dim_100dp"
            android:layout_marginBottom="@dimen/dim_32dp"
            android:layout_marginEnd="@dimen/dim_32dp"
            app:layout_constraintTop_toTopOf="@id/tv_detalis_city_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_label_detalis_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_label_detalis_city_name"
            app:layout_constraintTop_toBottomOf="@id/tv_label_detalis_city_name"
            android:text="@string/label_id" />

        <TextView
            android:id="@+id/tv_detalis_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tv_label_detalis_id"
            app:layout_constraintTop_toTopOf="@id/tv_label_detalis_id"
            tools:text="12345" />

        <TextView
            android:id="@+id/tv_label_details_weather_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_label_detalis_id"
            app:layout_constraintTop_toBottomOf="@id/tv_label_detalis_id"
            android:text="@string/label_main_weather" />

        <TextView
            android:id="@+id/tv_details_weather_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_label_details_weather_main"
            app:layout_constraintTop_toBottomOf="@id/tv_label_details_weather_main"
            tools:text="Clouds" />

        <TextView
            android:id="@+id/tv_details_descryption_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim_8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_details_weather_main"
            app:layout_constraintTop_toBottomOf="@id/tv_details_weather_main"
            tools:text="broken clouds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>